@startuml

title __PARKINGLOT's Class Diagram__\n

  package ParkingLot {
    class Car {
        + getVehicleSize()
    }
  }
  

  package ParkingLot {
    class Level {
        - spots : List<ParkingSpot>
        ~ Level()
        ~ hasSpot()
        ~ park()
        ~ leave()
    }
  }
  

  package ParkingLot {
    class ParkingLot {
        - levels : Level[]
        + ParkingLot()
        + hasSpot()
        + park()
        + leave()
    }
  }
  

  package ParkingLot {
    class ParkingSpot {
        ~ ParkingSpot()
        ~ emptyAndFit()
        ~ park()
        ~ leave()
        ~ getCurrentVehicle()
    }
  }
  

  package ParkingLot {
    class Test {
        {static} + main()
    }
  }
  

  package ParkingLot {
    class Truck {
        + getVehicleSize()
    }
  }
  

  package ParkingLot {
    abstract class Vehicle {
        {abstract} + getVehicleSize()
    }
  }
  

  package ParkingLot {
    enum VehicleSize {
      ~ Compact
      ~ Large
      - size
      + getSize()
    }
  }
  

  Car -up-|> Vehicle
  ParkingSpot o-- VehicleSize : spotSize
  ParkingSpot o-- Vehicle : currentVehicle
  Truck -up-|> Vehicle


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
